# tauri-hello-world

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  postcss.config.js  tsconfig.json
src/: index.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/components/App/: style.css
src/components/Root/: index.tsx
src/components/SearchByNames/: index.tsx
src/components/SearchTaller/: index.tsx
src/store/createStore/: index.ts
src/store/movies/: actions.ts  reducer.ts  sagas.ts  tauri.ts  types.ts
