[package]
name = "tauri-hello-world"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Victor Quiroz Castro <victorhqc@gmail.com>" ]
license = "MIT"
repository = "https://github.com/victorhqc/tauri-hello-world.git"
default-run = "tauri-hello-world"
edition = "2018"
build = "src/build.rs"

[dependencies]
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
snafu = "0.6"
rust-core = { git = "https://github.com/victorhqc/electronjs-with-rust-performance", branch = "master", features = [ "parallel", "bundled" ] }
tauri = { version = "0.9.2", features = [ "event" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "tauri-hello-world"
path = "src/main.rs"
